2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* ExternProto.x3dv:
	* Externproto.x3dv: 

2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp:
	* Rotor.x3dv:
	* ExternProto.x3dv:
	* Externproto.x3dv:
	* RoundedRectangle2D.x3dv: 

2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp: 

2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>

	* ComposedCubeMapTexture.x3dv: 

2013-10-01  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.ui:
	* BrowserWindow.cpp:
	* X3DBrowserWidget.h:
	* info.wrl:
	* X3DBrowserEditor.h:
	* X3DBrowserWidget.cpp:
	* X3DBrowserEditor.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2013-10-01  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.ui:
	* BrowserWindow.cpp:
	* X3DUserInterface.cpp:
	* NodePropertiesEditor.ui:
	* NodePropertiesEditor.cpp: 

2013-09-30  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DUserInterface.cpp:
	* NodePropertiesEditor.cpp: 

2013-09-30  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DConsoleInterface.h:
	* X3DConsoleInterface.cpp:
	* X3DLibraryViewInterface.h:
	* X3DLibraryViewInterface.cpp:
	* X3DOutlineEditorInterface.h:
	* X3DViewpointListInterface.h:
	* X3DHistoryEditorInterface.h:
	* X3DBrowserWindowInterface.h:
	* X3DViewpointListInterface.cpp:
	* X3DOutlineTreeViewInterface.h:
	* X3DOutlineEditorInterface.cpp:
	* X3DHistoryEditorInterface.cpp:
	* X3DBrowserWindowInterface.cpp:
	* NodePropertiesEditor.cpp:
	* X3DMotionBlurEditorInterface.h:
	* X3DOutlineTreeViewInterface.cpp:
	* X3DMotionBlurEditorInterface.cpp:
	* X3DNodePropertiesEditorInterface.h:
	* X3DNodePropertiesEditorInterface.cpp: 

2013-09-30  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp:
	* X3DBaseInterface.h:
	* X3DUserInterface.h:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* X3DUserInterface.cpp:
	* X3DBaseInterface.cpp:
	* X3DBrowserEditor.h:
	* info.wrl:
	* X3DBrowserWidget.h: