@@ -1,5 +1,11 @@
 2013-10-03  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DChildObject.cpp:
+	* Inline.cpp:
+	* ImageTexture.cpp: 
+
+2013-10-03  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Router.cpp:
 	* X3DBrowser.cpp:
 	* ExternProto.cpp:
