@@ -1,3 +1,7 @@
+2013-10-03  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* call_uncrustify.sh: 
+
 2013-09-18  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* call_uncrustify.sh: 
