@@ -1,3 +1,7 @@
+2013-10-03  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* HistoryEditor.cpp: 
+
 2013-10-02  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* ExternProto.x3dv:
